--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
         </div>
     </nav>
     <main class="container">
-        <!-- Área reservada para o conteúdo -->
+        <!-- Falta o carrossel de imagens aqui -->
+        <div class="card-deck">
+            <div class="col-md card border-info my-2 mx-1">
+                Primeiro cartão
+            </div>
+            <div class="col-md card border-info my-2 mx-1">
+                Segundo cartão
+            </div>
+            <div class="col-md card border-info my-2 mx-1">
+                Terceiro cartão
+            </div>
+        </div>
     </main>
     <footer class="container-fluid bg-dark" style="height: 120px;">
         <hr>
