--- a/index.html
+++ b/index.html
@@ -44,7 +44,50 @@
         </div>
     </nav>
     <main class="container">
-        <!-- Falta o carrossel de imagens aqui -->
+        <!-- Início do Carrossel -->
+        <div id="CarrosselIndex" class="carousel slide carousel-fade" data-ride="carousel">
+            <!-- Botões dos itens co carousel -->
+            <ol class="carousel-indicators">
+                <li data-target="#CarrosselIndex" data-slide-to="0" class="active"></li>
+                <li data-target="#CarrosselIndex" data-slide-to="1"></li>
+                <li data-target="#CarrosselIndex" data-slide-to="2"></li>
+            </ol>
+            <!-- Conteúdo do Carrosel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="carrossel/slide-01.jpg" alt="" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.8;">
+                        <h5>Curso de Informática</h5>
+                        <p>O que você precisa saber para entrar no mercado de trabalho.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="carrossel/slide-02.jpg" alt="" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.8;">
+                        <h5>Curso de Web Design</h5>
+                        <p>Criação de páginas Web seguindo as tendências do mercado.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="carrossel/slide-03.jpg" alt="" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.8;">
+                        <h5>Curso de programação</h5>
+                        <p>Desenvolvimento de programas através de linguagens de programação</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Setinhas laterais -->
+            <a href="#CarrosselIndex" class="carousel-control-prev" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a href="#CarrosselIndex" class="carousel-control-next" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+
+            </a>
+        </div>
+        <!-- Fim do Carrossel -->
         <div class="card-deck">
             <div class="col-md card border-info my-2 mx-1">
                 Primeiro cartão
