--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechnoSchool</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-info">
         <a href="index.html" class="navbar-brand">TechnoSchool</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-         data-target="#navbarNavDropdown" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -19,7 +22,8 @@
                     <a href="index.html" class="nav-link">Página Inicial</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cursos</a>
+                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cursos</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a href="cursos.html" class="dropdown-item">Todos</a>
                         <a href="informatica.html" class="dropdown-item">Informática Básica</a>
@@ -29,7 +33,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidades</a>
+                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidades</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a href="guara.html" class="dropdown-item">Guaratinguetá</a>
                         <a href="pinda.html" class="dropdown-item">Pindamonhangaba</a>
@@ -89,14 +94,38 @@
         </div>
         <!-- Fim do Carrossel -->
         <div class="card-deck">
-            <div class="col-md card border-info my-2 mx-1">
-                Primeiro cartão
+            <div class="col-md card border-info bg-dark my-2 mx-1">
+                <h5 class="card-header text-success">Cursos</h5>
+                <img src="imagens/excelpower.jpg" alt="Excel e Power-BI" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title text-success">Aprenda Excel e Power-BI</h5>
+                    <p class="card-text text-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
+                        modi consequatur eaque quaerat qui, numquam iusto earum repellendus ex recusandae, molestiae
+                        nesciunt obcaecati sapiente, dolore enim fuga quos? Maiores, quaerat?</p>
+                    <a href="dados.html" class="btn btn-success">Saiba mais!</a>
+                </div>
             </div>
             <div class="col-md card border-info my-2 mx-1">
-                Segundo cartão
+                <h5 class="card-header text-info">Quem somos</h5>
+                <img src="imagens/conheca.jpg" alt="TechnoSchool" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title text-info">Conheça a TechnoSchool</h5>
+                    <p class="card-text text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae,
+                        consequatur et enim placeat dolor totam repellat accusamus impedit, sapiente aperiam quaerat
+                        doloribus nisi! Saepe perferendis doloremque ducimus quia nemo eligendi.</p>
+                    <a href="quemsomos.html" class="btn btn-info">Clique e Conheça!</a>
+                </div>
             </div>
             <div class="col-md card border-info my-2 mx-1">
-                Terceiro cartão
+                <h5 class="card-header text-primary">Notícias</h5>
+                <img src="imagens/novidade.jpg" alt="Notícia" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title text-primary">Novidades para você!</h5>
+                    <p class="card-text text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus
+                        velit, ab consequuntur illo sit harum esse quia doloribus assumenda nulla provident delectus
+                        omnis quibusdam nam eum cum. Minus, natus!</p>
+                    <a href="noticias.html" class="btn btn-primary">Veja mais...</a>
+                </div>
             </div>
         </div>
     </main>
@@ -112,8 +141,15 @@
     </footer>
 
     <!-- Arquivos Javascript do Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
